Adds changes to Navigation bar, changes to css and other minor layout changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h2 class="mt-5">About Page</h2>
+    <small class="text-muted">
+        Work under progress!! 
+    </small>
 {% endblock content %}
