--- a/static/styles.css
+++ b/static/styles.css
@@ -8,26 +8,28 @@
 
 
 body {
-    background: #fafafa;
+    
     color: #333333;
     
     
+  }
+
+  .navbar-brand{
+    font-weight: 700;
+    
+    
+
   }
   
   h1, h2, h3, h4, h5, h6 {
     color: #444444;
   }
   
-  .bg-steel {
-    background-color: #5f788a;
-  }
   
-  .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
-  }
+
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #cbd5db;
   }
   
   .site-header .navbar-nav .nav-link.active {
