--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,9 +13,9 @@
      <!-- Title -->
 
     {% if title %}
-        <title>TinkerHub Project - {{ title }}</title>
+        <title>EventHub - {{ title }}</title>
     {% else %}
-        <title>TinkerHub Project</title>
+        <title>EventHub</title>
     {% endif %}
 </head>
 <body>
@@ -24,27 +24,25 @@
      <!-- Navbar -->
 
     <header class="site-header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid container">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="#">TinkerHub-Project</a>
+              <a class="navbar-brand" href="{{ url_for('home') }}">EventHub</a>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="{{ url_for('about') }}">About</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
+
                 </ul>
-                <form class="d-flex">
+                <form class="d-flex me-2">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
                  <!-- Navbar Right Side -->
                 <div class="navbar-nav">
@@ -69,15 +67,18 @@
           {% with messages = get_flashed_messages(with_categories= true) %}
              {% if messages %}
                {% for category, message in messages %}
-                <div class="alert alert-{{ category }}">
+                <div class="alert alert-{{ category }} mt-2">
                   {{ message }}
                 </div>
               {% endfor %}
              {% endif %}
           {% endwith %}
           {% block content %}{% endblock %}
-          }
+          
         </div>
+
+
+        <!-- Sidebar
         <div class="col-md-4 mt-5">
           <div class="content-section">
             <h3>Our Sidebar</h3>
@@ -94,7 +95,7 @@
       </div>
     </main>
 
-
+         -->
 
 
 
