adds a event management system, event ordering layout and pagination

--- a/event/templates/user_events.html
+++ b/event/templates/user_events.html
@@ -1,11 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
-
+    <h1 class="mb-3">Posts by {{ user.username }} ({{ events.total }})</h1>
+    
     <!-- Cards, looped using for -->
     <section>
         <div class="container mt-5">
         <div class="row">
-            {% for event in event_value.items %}
+            {% for event in events.items %}
             <div class="col-md-3 mb-5">
                 <div class="card" style="width: 18rem;">
                     <img src="https://assets-global.website-files.com/5ae98eec19474e9f8c0cd052/5ae98eec19474e48570cd278_coveredited.jpg" class="card-img-top" alt="">
@@ -31,18 +32,15 @@
 
     </section>
 
-    {% for page_num in event_value.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+    {% for page_num in events.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
       {% if page_num %}
-        {% if event_value.page == page_num %}
-          <a class="btn btn-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+        {% if events.page == page_num %}
+          <a class="btn btn-dark mb-4" href="{{ url_for('user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a class="btn btn-outline-dark mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+          <a class="btn btn-outline-dark mb-4" href="{{ url_for('user_events', username =user.username, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
         ...
       {% endif %}
     {% endfor %}
-    
 {% endblock content %}
-
-
