--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -47,6 +47,7 @@
                  <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                   {% if current_user.is_authenticated %}
+                  <a class="nav-item nav-link" href="{{ url_for('new_event') }}">Add an Event</a>
                   <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                   {% else %}
@@ -68,8 +69,8 @@
 
 
     <main role="main" class="container">
-      <div class="row">
-        <div class="col-md-8">
+     <!-- <div class="row">
+        <div class="col-md-8"> -->
           {% with messages = get_flashed_messages(with_categories= true) %}
              {% if messages %}
                {% for category, message in messages %}
