--- a/event/templates/account.html
+++ b/event/templates/account.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
+<div class="content-section mt-5">
     <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
@@ -12,12 +12,12 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Account Info</legend>
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }}
+            <div class="form-group mb-3">
+                {{ form.username.label(class="form-control-label mb-3") }}
 
                 {% if form.username.errors %}
                 {{ form.username(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+                <div class="invalid-feedback mb-3">
                     {% for error in form.username.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
@@ -26,11 +26,11 @@
                 {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.email.label(class="form-control-label") }}
+            <div class="form-group mb-3">
+                {{ form.email.label(class="form-control-label mb-3") }}
                 {% if form.email.errors %}
                 {{ form.email(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+                <div class="invalid-feedback mb-3">
                     {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
@@ -39,7 +39,7 @@
                 {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 {{ form.picture.label() }}
                 {{ form.picture(class="form-control-file") }}
                 {% if form.picture.errors %}
@@ -49,7 +49,7 @@
                 {% endif %}
             </div>
         </fieldset>
-        <div class="form-group">
+        <div class="form-group mb-3">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
