--- a/event/templates/create_event.html
+++ b/event/templates/create_event.html
@@ -44,6 +44,7 @@
                 {{ form.venue(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+
             <div class="form-group mb-3">
                 {{ form.date.label(class="form-control-label mb-3") }}
                 {% if form.date.errors %}
@@ -54,9 +55,38 @@
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.venue(class="form-control form-control-lg") }}
+                {{ form.date(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+
+            <div class="form-group mb-3">
+                {{ form.time.label(class="form-control-label mb-3") }}
+                {% if form.time.errors %}
+                {{ form.time(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback mb-3">
+                    {% for error in form.time.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.time(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
+            <div class="form-group mb-3">
+                {{ form.max.label(class="form-control-label mb-3") }}
+                {% if form.max.errors %}
+                {{ form.max(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback mb-3">
+                    {% for error in form.max.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.max(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+           
         </fieldset>
         <div class="form-group mb-3">
             {{ form.submit(class="btn btn-outline-info") }}
