--- a/event/templates/create_event.html
+++ b/event/templates/create_event.html
@@ -86,6 +86,16 @@
                 {{ form.max(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
+
+            <div class="form-group mb-3">
+                {{ form.banner.label() }}
+                {{ form.banner(class="form-control-file") }}
+                {% if form.banner.errors %}
+                {% for error in form.banner.errors %}
+                <span class="text-danger">{{ error }}</span></br>
+                {% endfor %}
+                {% endif %}
+            </div>
            
         </fieldset>
         <div class="form-group mb-3">
