--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -55,8 +55,11 @@
                 <div class="navbar-nav">
                   {% if current_user.is_authenticated %}
                   <a class="nav-item nav-link" href="{{ url_for('new_event') }}">Add an Event</a>
+                  <a class="nav-item nav-link" href="{{ url_for('myevents') }}">My Events</a>
                   <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                 
+
                   {% else %}
                   <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
                   <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
