--- a/event/templates/confirm_event.html
+++ b/event/templates/confirm_event.html
@@ -4,18 +4,18 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Reset Password</legend>
+            <legend class="border-bottom mb-4">Confirm Event</legend>
             <div class="form-group mb-3">
-                {{ form.email.label(class="form-control-label mb-3") }}
-                {% if form.email.errors %}
-                {{ form.email(class="form-control form-control-lg is-invalid") }}
+                {{ form.eventId.label(class="form-control-label mb-3") }}
+                {% if form.eventId.errors %}
+                {{ form.eventId(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback mb-3">
-                    {% for error in form.email.errors %}
+                    {% for error in form.eventId.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.email(class="form-control form-control-lg") }}
+                {{ form.eventId(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
         </fieldset>
