--- a/event/templates/reset_token.html
+++ b/event/templates/reset_token.html
@@ -6,10 +6,10 @@
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Reset Password</legend>
             <div class="form-group">
-                {{ form.password.label(class="form-control-label") }}
+                {{ form.password.label(class="form-control-label mb-3") }}
                 {% if form.password.errors %}
                 {{ form.password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+                <div class="invalid-feedback mb-3">
                     {% for error in form.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
@@ -18,11 +18,11 @@
                 {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }}
+            <div class="form-group mb-3">
+                {{ form.confirm_password.label(class="form-control-label mb-3") }}
                 {% if form.confirm_password.errors %}
                 {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+                <div class="invalid-feedback mb-3">
                     {% for error in form.confirm_password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
@@ -32,7 +32,7 @@
                 {% endif %}
             </div>
         </fieldset>
-        <div class="form-group">
+        <div class="form-group mb-3">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
     </form>
