adds RSVP notification control and participant data for event creators

--- a/event/templates/event.html
+++ b/event/templates/event.html
@@ -21,14 +21,16 @@
                       {% if current_user.is_authenticated %}
 
                       {% if event.author == current_user %}
+
                       <div>
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_event', event_id=event.id) }}">Update</a>
-                        <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button>
+                        <p>Notify participants to confirm attendence here: <a class="btn btn-secondary btn-sm inline" href="{{ url_for('confirm', event_id=event.id) }}">Notify</a></p>
+                        
+                        <p>No of Participants who confirmed their attendance:<strong> {{ no_reg_confirmed }}</strong></p>
                       </div>
 
                       <div>
-                        <p>Notify Participants to confirm Attendence Here:</p>
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('confirm', event_id=event.id) }}">Notify</a>
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_event', event_id=event.id) }}">Update</a>
+                        <button type="button" class="btn btn-danger btn-sm m-1" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</button>
                       </div>
                     {% endif %}
                    
