--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -58,7 +58,7 @@
                   {% endif %}
                   {% if current_user.is_authenticated %}
                   <a class="nav-item nav-link" href="{{ url_for('new_event') }}">Add an Event</a>
-                  <a class="nav-item nav-link" href="{{ url_for('myevents') }}">My Events</a>
+                  <a class="nav-item nav-link" href="{{ url_for('reg_event') }}">Registered Event</a>
                   <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                   {% else %}
