--- a/event/templates/registered_event.html
+++ b/event/templates/registered_event.html
@@ -2,7 +2,7 @@
 {% block content %}
   <h1>Your Events</h1>
 {% for i in range(size) %}
-   <p><strong><em>{{ event_list[i].name }}</em></strong> on {{ event_list[i].time.strftime("%b %d")}} at {{ event_list[i].time }} pm, <em>Venue:</em> <strong>{{ event_list[i].venue }}</strong></p>
+   <p><strong><em>{{ event_list[i].name }}</em></strong> on {{ event_list[i].date.strftime("%b %d")}} at {{ event_list[i].time }} pm, <em>Venue:</em> <strong>{{ event_list[i].venue }}</strong></p>
 {% endfor %}
 
 {% endblock content %}
