--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -59,7 +59,7 @@
                   {% if current_user.is_authenticated %}
                   <a class="nav-item nav-link" href="{{ url_for('new_event') }}">Add an Event</a>
                   <a class="nav-item nav-link" href="{{ url_for('reg_event') }}">Registered Event</a>
-                  
+                  <a class="nav-item nav-link" href="{{ url_for('user_event') }}">My Event</a>
                   <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                   <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
                   {% else %}
