--- a/event/templates/about.html
+++ b/event/templates/about.html
@@ -1,7 +1,58 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h2 class="mt-3">About Page</h2>
-    <small class="text-muted">
-        Work under progress!! 
-    </small>
+
+
+
+        <section class="header">
+            <div class="text-box">
+                <h1>Dhwani</h1>
+                <h3>CET's cultural Extravaganza</h3>
+                
+            </div>
+
+        </section>
+        <section class="info">
+            <div class="row">
+                <div class="col-md-5 info-col">
+                    <h3>What is Dhwani?</h3>
+                    <p>Dhwani is the annual cultural festival of the College of Engineering, Trivandrum, popularly known as CET.
+                         Established in 1939 during the reign of the Travancore King, Sree Chithira Thirunal Balarama Varma, College of Engineering, Trivandrum, 
+                         has established supremacy not only in the field of technical education but also socio-cultural events and programs throughout the state.</p>
+                </div>
+                
+                <div class="col-md-5 info-col">
+                    <h3>History</h3>
+                    <p>The beginning of Dhwani could be traced back to 1999 wherein it was merely a side show to the CETEX exhibition celebrating 60 years of CET. 
+                        However the idea for a College cultural festival was conceived when a group of students representing the college attended Mood Indigo, 
+                        cultural festival of Indian Institute of Technology Bombay in 2000.
+                         There in efforts were put forward to realise an annual festival for one of the most prestigious institution in Southern India.</p>
+                </div>
+
+                
+            </div>
+        </section>
+        <section class="glimpse">
+            <h1>Glimpses</h1>
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousal-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+
+                    </div>
+                    <div class="carousel-item">
+
+                    </div>
+                </div>
+            </div>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+
+        </section>
+
+    
+
+
 {% endblock content %}
