--- a/event/templates/about.html
+++ b/event/templates/about.html
@@ -33,23 +33,17 @@
         </section>
         <section class="glimpse">
             <h1>Glimpses</h1>
-            <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousal-indicators">
-                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#myCarousel" data-slide-to="1"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-
-                    </div>
-                    <div class="carousel-item">
-
-                    </div>
-                </div>
+            <div class="slider">
+                <figure>
+                    <img src="{{url_for('static',filename='carousal/img_10.jpg')}}">
+                    <img src="{{url_for('static',filename='carousal/img_9.jpg')}}">
+                    <img src="{{url_for('static',filename='carousal/img_8.jpg')}}">
+                    <img src="{{url_for('static',filename='carousal/img_7.jpg')}}">
+                    <img src="{{url_for('static',filename='carousal/img_10.jpg')}}">
+                </figure>
             </div>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-
+            
         </section>
 
     
