--- a/event/templates/layout.html
+++ b/event/templates/layout.html
@@ -17,6 +17,9 @@
       rel="stylesheet"
     />
 
+    <!-- Vectors -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+
      <!-- Title -->
 
     {% if title %}
@@ -31,12 +34,13 @@
      <!-- Navbar -->
 
     <header class="site-header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+            <div id="navi" class="container-fluid">
+              <a class="navbar-brand" href="{{ url_for('home') }}">EventHub</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="{{ url_for('home') }}">EventHub</a>
+              
               <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -47,24 +51,30 @@
                   </li>
 
                 </ul>
-                <form class="d-flex me-2">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
+
                  <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                  {% if current_user.is_admin %}
-                  <a class="nav-item nav-link" href="{{ url_for('approve_admin') }}">Approve Event</a>
-                  {% endif %}
+
                   {% if current_user.is_authenticated %}
-                  <a class="nav-item nav-link" href="{{ url_for('new_event') }}">Add an Event</a>
-                  <a class="nav-item nav-link" href="{{ url_for('reg_event') }}">Registered Event</a>
-                  <a class="nav-item nav-link" href="{{ url_for('user_event') }}">My Event</a>
-                  <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
-                  <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+                  <div class="dropdown">
+                    <a class="nav-link" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-user-circle fa-2x usercircle"></i></a>
+
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
+                      {% if current_user.is_admin %}
+                      <li><a class="dropdown-item" href="{{ url_for('approve_admin') }}">Approve Event</a></li>
+                      {% endif %}
+                      <li><a class="dropdown-item" href="{{ url_for('new_event') }}">Add an Event</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('reg_event') }}">Registered Event</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('user_event') }}">My Event</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('account') }}">Account</a></li>
+                      <li><a class="dropdown-item" href="{{ url_for('logout') }}">Logout</a></li>
+                    </ul>
+                  </div>
+                  
                   {% else %}
                   <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                  <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                  <a class="btn btn-dark ms-2 grow " href="{{ url_for('register') }}">&nbsp;Register&nbsp;</a>                  
                   {% endif %}
                 </div>
                 </div>
@@ -79,8 +89,8 @@
     <!-- Content and Sidebar -->
 
 
-
-    <main role="main" class="container">
+    
+    <main role="main" class="container-fluid">
      <!-- <div class="row">
         <div class="col-md-8"> -->
           {% with messages = get_flashed_messages(with_categories= true) %}
@@ -95,6 +105,50 @@
           {% block content %}{% endblock %}
           
         </div>
+        </main>
+
+        <section id="footer" class="mt-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-8"><div id="footer_text">EventHub</div>
+              <br>
+                An Event Portal for college events.<br>
+                Experimental version.
+
+              </div>
+              <div class="col-sm-4">
+                <div id="footer_text_c" class="mb-1">Links</div>                
+                <div>
+                {% if current_user.is_authenticated %}
+                  <ul style="list-style-type: none; margin:0; padding:0;">
+                    {% if current_user.is_admin %}
+                    <li><a id="footer_text_b" href="{{ url_for('approve_admin') }}">Approve Event</a></li>
+                    {% endif %}
+                    <li><a id="footer_text_b" href="{{ url_for('new_event') }}">Add an Event</a></li>
+                    <li><a id="footer_text_b" href="{{ url_for('reg_event') }}">Registered Event</a></li>
+                    <li><a id="footer_text_b" href="{{ url_for('user_event') }}">My Event</a></li>
+                    <li><a id="footer_text_b" href="{{ url_for('account') }}">Account</a></li>
+                    <li><a id="footer_text_b" href="{{ url_for('logout') }}">Logout</a></li>
+                  </ul>
+                </div>
+                
+                {% else %}
+                <ul style="list-style-type: none; margin:0; padding:0;">
+                <li><a id="footer_text_b" href="{{ url_for('login') }}">Login</a></li>
+                <li><a id="footer_text_b" href="{{ url_for('register') }}">Register</a></li>   
+              </ul>          
+                {% endif %}
+              </div>
+              </div>
+            </div>
+            </div>
+          </div>
+
+        </section>
+
+        <section id="footer_base">
+
+        </section>
 
 
         <!-- Sidebar
@@ -121,6 +175,8 @@
 
     <!-- JavaScript  -->
     
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js.js') }}"></script>
 </body>
 </html>
